Increased size of parallax and mid text

--- a/index.html
+++ b/index.html
@@ -15,13 +15,13 @@
 <body>
     <nav>
         <ul>
-            <li><a href="#">About</a></li>
+            <li><a href="#about-me">About</a></li>
             <li>|</li>
-            <li><a href="#">Portfolio</a></li>
+            <li><a href="#portfolio">Portfolio</a></li>
             <li>|</li>
-            <li><a href="#">Skills</a></li>
+            <li><a href="#skills">Skills</a></li>
             <li>|</li>
-            <li><a href="#">Contact</a></li>
+            <li><a href="#contact-me">Contact</a></li>
         </ul>
     </nav>
 
@@ -40,7 +40,7 @@
         <img class="flex-item" id="avatar" src="images/avatar.png" alt="">
     </div>
 
-    <div class="has-parallax" style="background-image: url(images/bg2.jpg)">
+    <div class="has-parallax" id="about-me" style="background-image: url(images/bg2.jpg)">
         <div class="parallax-text">
             <h2>About Me</h2>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna
@@ -49,11 +49,11 @@
             occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
         </div>
     </div>
-    <div class="mid-text" style="background-color: #EDB98A;">
+    <div class="mid-text" id="portfolio" style="background-color: #EDB98A;">
         <h2>Portfolio</h2>
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
     </div>
-    <div class="has-parallax" style="background-image: url(images/bg1.jpg)">
+    <div class="has-parallax" id="skills" style="background-image: url(images/bg1.jpg)">
         <div class="parallax-text" id="skills-text" style="float: left">
             <h2>Skills</h2>
             <ul>
@@ -61,17 +61,19 @@
                 <li><i class="fab fa-html5"></i>HTML5</li>
                 <li><i class="fab fa-js-square"></i>Javascript</li>
                 <li><i class="fab fa-css3-alt"></i>CSS3</li>
-                <li><i class="fab fa-android"></i>Android</li>
+                <li><i class="fab fa-python"></i></i>Python</li>
+                <li><i class="devicon-godot-plain"></i>Godot</li>
+                <!--
+                <li><i class="devicon-rstudio-plain"></i></i>R</li>
                 <li><i class="fab fa-unity"></i>Unity</li>
                 <li><i class="fab fa-java"></i></i>Java</li>
-                <li><i class="devicon-cplusplus-plain"></i>C++</li>
-                <li><i class="fab fa-python"></i></i>Python</li>
-                <li><i class="devicon-csharp-plain"></i>C Sharp</li>
+                <li><i class="devicon-csharp-plain"></i>C#</li>
+                <li><i class="devicon-cplusplus-plain"></i>C++</li>-->
                 
             </ul>
         </div>
     </div>
-    <div class="mid-text" style="background-color: #39a4de;">
+    <div class="mid-text" id="projects" style="background-color: #39a4de;">
         <h2>Personal Projects</h2>
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
             magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
@@ -81,7 +83,7 @@
     </div>
     <div class="has-parallax" style="background-image: url(images/bg3.jpg)">
         <div class="parallax-text">
-            <h2>How I Can Help</h2>
+            <h2>I Can Help</h2>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna
                 aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
                 Duis
@@ -89,7 +91,7 @@
                 occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
         </div>
     </div>
-    <div class="mid-text" style="background-color: #EDB98A;">
+    <div class="mid-text" id="contact-me" style="background-color: #EDB98A;">
         <h2>Contact Me!</h2>
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodoconsequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nullapariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
         </p>
